--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "nodemailer": "^6.4.6",
     "routes": "^2.1.0"
   },
   "scripts": {
